Update GitHub Actions to use Node 22

--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: [20.x]
+        node_version: [22]
         app_type:
           - JwtDtoWebsocketsApp
           - OauthFlickrApp
