--- a/generators/react-native/resources/expo/package.json
+++ b/generators/react-native/resources/expo/package.json
@@ -7,36 +7,36 @@
     "update-dependencies": "npm install && npx expo install --fix && rm -rf package-lock.json node_modules"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-masked-view/masked-view": "0.3.1",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/devtools": "6.0.27",
-    "expo": "51.0.38",
-    "expo-auth-session": "~5.5.2",
-    "expo-constants": "~16.0.2",
-    "expo-image-picker": "~15.0.5",
-    "expo-linking": "~6.3.1",
+    "expo": "52.0.5",
+    "expo-auth-session": "~6.0.0",
+    "expo-constants": "~17.0.2",
+    "expo-image-picker": "~16.0.1",
+    "expo-linking": "~7.0.2",
     "expo-random": "~14.0.1",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "expo-splash-screen": "~0.29.8",
+    "expo-status-bar": "~2.0.0",
+    "expo-web-browser": "~14.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@react-native-community/cli-server-api": "15.1.0",
-    "@types/react": "~18.2.79",
-    "jest-expo": "~51.0.2",
+    "@types/react": "~18.3.12",
+    "jest-expo": "~52.0.0",
     "typescript": "~5.3.3"
   },
   "expo": {
