--- a/generators/react-native/templates/package.json
+++ b/generators/react-native/templates/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@babel/runtime": "7.26.0",
     "@config-plugins/detox": "8.0.0",
-    "@react-native-community/eslint-config": "3.2.0",
+    "@eslint/js": "9.14.0",
     "@redux-devtools/extension": "3.3.0",
     "@storybook/addons": "7.6.17",
     "@storybook/react-native": "7.6.19",
@@ -48,10 +48,13 @@
     "buffer": "6.0.3",
     "create-expo-app": "3.1.1",
     "detox": "20.27.6",
-    "eslint": "8.57.0",
+    "eslint": "9.14.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "7.37.2",
+    "eslint-plugin-react-hooks": "5.0.0",
     "expect": "29.7.0",
+    "globals": "15.12.0",
     "jest": "29.7.0",
     "jest-circus": "29.7.0",
     "lint-staged": "15.2.10",
