--- a/generators/react-native/templates/package.json
+++ b/generators/react-native/templates/package.json
@@ -50,6 +50,7 @@
     "detox": "20.27.6",
     "eslint": "9.14.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-jest": "28.9.0",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "5.0.0",
@@ -65,6 +66,7 @@
     "resolve": "1.22.8",
     "rimraf": "5.0.7",
     "tapable": "2.2.1",
-    "ts-jest": "29.2.5"
+    "ts-jest": "29.2.5",
+    "typescript-eslint": "8.14.0"
   }
 }
