--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -28,6 +28,8 @@ jobs:
         run: |
           cd generators/react-native/resources/expo
           npm run check-dependencies
+        env:
+          EXPO_OFFLINE: 1
 
   build-matrix:
     runs-on: ubuntu-latest
